=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.06 - October 18, 2009

=over

=item *

Unknown publish errors from the Web UI now result in a normal ISE
(die) like other errors and are displayed with the same modal dialog
in the UI. This also triggers the C<ErrorNotificationEmail> to be sent
if configured.

=item *

Fixed error when publishing a MediaLink element that didn't actually
have a media object selected. Now we just silently return and continue
with the publish. [Michael Peters]

=item *

Normalize Unicode characters coming in so that we always have single
grapheme characters. Unicode can have "composed" characters where the
same character is actually represented by combining multiple characters.
Use NFC normalization so that we just store a single character. This will
make it easier to do things like full text search on Unicode characters
that might have been submitted as multiple graphemes. [Michael Peters]

=item *

Fixed IE (6, 7 & 8) where the Category Chooser on Edit Media screen
was hidden behind every table but the initial one (the meta-data
table). [Michael Peters]

=item *

Per user requests, changed default sort order for Find Story 
and Find Media interfaces (toplevel screens and StoryLink/MediaLink 
screens) to descending ID (instead of ascending ID) so newest items 
are visible on the first page. [Noam Weinstein]

=item *

Fixed issue (discovered by Dave Kaufman) where Media and Category Edit 
screens contained duplicate "Done With" & "Delete" buttons when editing
containers, and -- in the case of Category -- the inner "Done With"
was failing. (The above issues appear to have been caused by 
ElementEditor.tmpl being changed without all of the templates that include 
ElementEditor.tmpl being updated.) Also renamed the top-level (big green)
"Delete" buttons on Edit screens "Delete Story", "Delete Media", "Delete 
Category", and "Delete Template" since top-level objects are being